--- a/nx.json
+++ b/nx.json
@@ -33,6 +33,13 @@
     "app1-e2e": {
       "tags": [],
       "implicitDependencies": ["app1"]
+    },
+    "app2": {
+      "tags": []
+    },
+    "app2-e2e": {
+      "tags": [],
+      "implicitDependencies": ["app2"]
     }
   }
 }
